--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
   "main": "index.js",
   "devDependencies": {
     "jasmine": "^2.3.2"
+  },
+  "scripts": {
+    "test": "./node_modules/.bin/jasmine"
   }
 }
